--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,13 +30,17 @@
   {% seo title=false %}
 
   {% if site.google_analytics_id %}
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', '{{ site.google_analytics_id }}', 'auto');
-    ga('send', 'pageview');
-  </script>
+<!-- Google tag (gtag.js) -->
+
   {% endif %}
+
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MJ3E2VC6SJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MJ3E2VC6SJ');
+</script>
 </head>
