--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,12 @@
+  <!-- 
+   
+  Test deploy 
+
+  WAKE ME UP BEFORE YOU GO-GO
+   
+  
+  -->
 <head>
-  <!-- Test deploy -->
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
