chore: new header

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,10 @@
   <!-- 
    
-  Test deploy 
+  Test deploy - Updated with force rebuild
 
   WAKE ME UP BEFORE YOU GO-GO
    
+  <!-- Rebuild marker: {{ site.rebuild }} -->
   
   -->
 <head>
