chore: new header 2

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
   <!-- 
    
-  Test deploy - Updated with force rebuild
+  TEST BANNER: THIS SHOULD DEFINITELY APPEAR!!!
 
   WAKE ME UP BEFORE YOU GO-GO
    
