--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,13 +1,6 @@
-  <!-- 
-   
-  TEST BANNER: THIS SHOULD DEFINITELY APPEAR!!!
-
-  WAKE ME UP BEFORE YOU GO-GO
-   
-  <!-- Rebuild marker: {{ site.rebuild }} -->
-  
-  -->
 <head>
+  <h1 style="background-color: red; color: white; padding: 20px; text-align: center;">TEST BANNER: THIS SHOULD DEFINITELY APPEAR!!!</h1>
+  
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
