chore: new header 6

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,9 @@
 <head>
-  <h1 style="background-color: red; color: white; padding: 20px; text-align: center;">TEST BANNER: THIS SHOULD DEFINITELY APPEAR!!!</h1>
+  <h1 style="background-color: red; color: white; padding: 20px; text-align: center; font-size: 24px; position: fixed; top: 0; left: 0; right: 0; z-index: 9999;">TEST BANNER: THIS SHOULD DEFINITELY APPEAR!!!</h1>
+  
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
   
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
