--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
+  <!-- Rebuild timestamp: {{ site.rebuild_timestamp }} -->
   {% include head.html %}
 
   <body>
